--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -14,132 +14,81 @@ hr {
 }
 
 button {
+  background-color: rgb(255, 255, 255);
   font-size: 18px;
-  outline: none;
   border: none;
   color: black;
-  background-color: transparent;
   padding: 5px 20px;
   border-radius: 3px;
-  transition: background-color 0.2s ease;
+  position: relative;
 }
-
 button:hover {
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(160, 160, 160);
 }
 
-button:focus {
-  outline: none;
-}
 
-.hidden {
-  display: none !important;
-}
-
-#game-canvas {
+#board-canvas {
+  position: fixed;
   width: 100%;
   height: 100%;
 }
 
-#play-menu {
+.userpanel  {
+  width: 0;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  padding: 20px 30px;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 5px;
-  text-align: center;
-}
-
-#play-menu p {
-  margin-bottom: 0;
-}
-
-#play-menu input {
-  font-size: 18px;
-  outline: none;
-  border: none;
-  border-bottom: 1px solid black;
-  margin-bottom: 5px;
-  padding: 3px;
-  text-align: center;
-}
-
-#play-menu input:hover {
-  outline: none;
-}
-
-#leaderboard {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 10px;
-  border-radius: 5px;
-}
-
-#leaderboard th {
-  text-align: center;
-  padding: 2px 5px;
-}
-
-#leaderboard td {
-  text-align: center;
-  padding: 2px 5px;
-}
-
-#disconnect-modal {
-  position: fixed;
+  z-index: 0;
+  height: 100%;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgb(230, 230, 230);
+  overflow-x: hidden;
+  transition: 0.2s;
+  padding-top: 60px;
 }
 
-#disconnect-modal > div {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  padding: 15px 20px;
-  background-color: white;
-  border-radius: 5px;
-  text-align: center;
+.userpanel .closebtn {
+  color: #000000;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+}
+.dropbtn {
+  outline:none;
+  background: transparent;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
 }
 
-@media screen and (max-width: 640px) {
-  h1 {
-    font-size: 2rem;
-  }
-
-  h2 {
-    font-size: 1.75rem;
-  }
-
-  #play-menu {
-    padding: 10px 15px;
-    min-width: 280px;
-  }
-
-  #disconnect-modal > div {
-    padding: 10px;
-    min-width: 280px;
-  }
-
-  #leaderboard th {
-    padding: 0 3px;
-  }
-
-  #leaderboard td {
-    padding: 0 3px;
-  }
-
-  #leaderboard table {
-    font-size: 14px;
-  }
+.dropbtn:hover, .dropbtn:focus {
+  outline:none;
+  background: transparent;
+  color: #000000;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display:none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
