--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -26,6 +26,24 @@ button:hover {
   background-color: rgb(160, 160, 160);
 }
 
+.alert {
+  display: none;
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  position: relative;
+}
+
+.alert .closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
 
 #board-canvas {
   position: fixed;
